# streams-of-data-streamlit-app

./: README.md  pyproject.toml  streamlit_app.py
src/: data_loader.py
