[tool.poetry]
name = "streams-of-data-streamlit-app"
version = "0.1.0"
description = ""
authors = ["alex-antonison-mtsu <aantonison@mtsu.edu>"]
readme = "README.md"
packages = [{include = "streams_of_data_streamlit_app"}]

[tool.poetry.dependencies]
python = "~3.10"
awswrangler = "^2.20.1"
streamlit = "^1.20.0"
matplotlib = "^3.7.1"
watchdog = "^3.0.0"
plotly = "^5.13.1"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
notebook = "^6.5.3"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
